2014-10-28  Dana Burkart  <dburkart@apple.com>

        Merge r174791. <rdar://problem/18753175>

    2014-10-16  Tim Horton  <timothy_horton@apple.com>
    
            Implement selection services menu for Legacy WebKit
            https://bugs.webkit.org/show_bug.cgi?id=137582
            <rdar://problem/18604241>
    
            Reviewed by Brady Eidson.
    
            * Misc/WebSharingServicePickerController.h:
            Move SPI into the header (in the near future it will be moved to a modern-style SPI header).
            Add WebSharingServicePickerClient, which other classes can implement
            instead of tying WebSharingServicePickerController strongly to WebContextMenuClient.
            Make initWithData:... -> initWithItems:... instead, taking an array of NSItemProviders.
    
            * Misc/WebSharingServicePickerController.mm:
            Pass in NSSharingServicePickerStyle, so that clients can specify the style.
    
            (-[WebSharingServicePickerController clear]):
            (-[WebSharingServicePickerController didShareImageData:confirmDataIsValidTIFFData:]):
            (-[WebSharingServicePickerController sharingServicePicker:didChooseSharingService:]):
            (-[WebSharingServicePickerController sharingService:sourceFrameOnScreenForShareItem:]):
            (-[WebSharingServicePickerController sharingService:transitionImageForShareItem:contentRect:]):
            (-[WebSharingServicePickerController sharingService:sourceWindowForShareItems:sharingContentScope:]):
            Make use of WebSharingServicePickerClient.
    
            (-[WebSharingServicePickerController sharingService:didShareItems:]):
            If we're returned a NSAttributedString, paste it on top of the current selection,
            similar to what the WebKit2 implementation currently does.
            
            * WebCoreSupport/WebChromeClient.h:
            * WebCoreSupport/WebChromeClient.mm: